--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin:0;
     padding: 0;
     background-color: #e9ecef;
-    font-family: "Yusei Magic", serif;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
     font-style: normal;
     background-color: #dee2e6;
